--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -21,8 +22,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.8.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-js": "^1.0.6",
+    "redux-thunk": "^2.4.0",
     "typescript": "^4.4.4",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
